bug fix : add connection event listeners after auto align

--- a/CSS/restartstyle.css
+++ b/CSS/restartstyle.css
@@ -219,7 +219,7 @@
     margin-left: -10px;
     margin-top: 80px;
     border: 1px solid darkblue;
-    background-color: white;
+    background-color: darkblue;
 }
 
 .pro:hover {
